# llm-local-investigator

./: Makefile  README.md  pyproject.toml  requirements.txt  run.py
app/: cli.py  compat_graph.py  config.py  dashboard.py  graph_flow.py  llm_client.py  models.py  probes.py  reporting.py  rules.py  shell.py  snapshot.py  state.py  storage.py  trace.py  utils.py
db/: freeze_investigator.sqlite3
outputs/incident_20260228_070000/: artifacts.base.json  llm.calls.json  report.html  report.md  snapshots.window.json  state.summary.json  trace.events.json
outputs/incident_20260228_070000/llm/: final.parsed.json  final.request.json  preliminary.request.json
scripts/: install_ubuntu.sh  investigate_example.sh  start_llama_server_example.sh
snapshots/: 20260302.jsonl
systemd/: freeze-dashboard.service  freeze-snapshot.service  freeze-snapshot.timer
